# python-template

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  changelog-template.j2  cliff.toml  flake.nix  maskfile.md  mkdocs.yml  pyproject.toml  versions.json
.github/: pull_request_template.md
.github/workflows/: lint-pr.yml
0.2.0/: index.html  objects.inv
0.2/search/: search_index.json
0.3/: objects.inv
0.3.0/: 404.html  index.html
0.3.1/: index.html
0.3.1/search/: search_index.json
0.3.2/: index.html  search.html
0.3.2/search/: search_index.json
0.4/: 404.html  index.html
0.4.0/: 404.html  index.html  objects.inv
0.4.0/search/: search_index.json
0.5/: 404.html  index.html  objects.inv
0.5.0/: 404.html  index.html
0.5/search/: search_index.json
0.6/: 404.html  index.html
0.6.0/: 404.html  index.html  objects.inv
0.6.0/search/: search_index.json
0.6/search/: search_index.json
0.7/: 404.html  index.html
0.7.0/: 404.html  index.html
0.7.0/search/: search_index.json
0.7/search/: search_index.json
0.9/: index.html
0.9.0/: 404.html
0.9.1/: index.html
1.1/: 404.html
1.1.2/search/: search_index.json
1.2/: 404.html  index.html
1.2.0/search/: search_index.json
1.2.1/: index.html
1.2.1/search/: search_index.json
1.2.2/search/: search_index.json
1.3.0/search/: search_index.json
2.0.0/: 404.html
2.0.1/search/: search_index.json
5.0.1/: index.html
5.2/: 404.html  index.html  objects.inv
5.2/search/: search_index.json
5.3/: 404.html  index.html  objects.inv
5.3/search/: search_index.json
cli/: __init__.py  calculator.py
core/: __init__.py  calculator.py
docs/: README.md  index.md
docs/explanation/: aim-of-project.md  aim.md  structure.md
docs/how-to/: add-dependency.md  build-docs.md  bump-version.md  dependencies.md  docs.md  install.md  maskfile.md  run-api.md  run-cli.md  testing.md
docs/reference/: api.md  calculator.md  cli.md  greeter.md
docs/tutorials/: getting-started.md
tests/: test_api.py  test_async_stuff.py  test_calculator.py
(+186 files in other folders)
