[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pytest-better-parametrize>=0.2.0",
    "typer>=0.15.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio==1.0.0a1",      # This version handles the `asyncio.get_event_loop_policy` deprecation in python3.14
    "pytest-dotenv>=0.5.2",
    "pytest-watcher>=0.4.3",
    "pytest-cov>=6.1.1",
    "coverage>=7.8.0",
    "ruff>=0.11.10",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.29.1",
    "mike>=2.1.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = "-p no:cacheprovider"
testpaths = ["tests"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]

[tool.pytest-watcher]
now = true # run tests immediately; don't wait for the first file edit
clear = true # clear the terminal before each test run